vyre-macros/tests/ui/bad_define_op_duplicate_argument.stderr
error: duplicate macro argument `id`. Fix: keep exactly one `id` entry.
 --> tests/ui/bad_define_op_duplicate_argument.rs:5:5
  |
5 |     id = "primitive.bad.late_override",
  |     ^^
